--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1314,7 +1314,7 @@ ru:
       title_profile: "Настройки профиля"
       title_settings: "Настройки аккаунта"
     form: 
-      avatar: 
+      picture: 
         field: "Ваш аватар"
         max_size: "Нельзя загружать файл больше %{mb}"
         presence: "Нельзя загружать пустой файл"
@@ -1331,10 +1331,12 @@ ru:
       last_name: Фамилия
       login: Логин
       monday: Понедельник
-      notify_conversations: "Уведомлять меня о сообщениях в отслеживаемом обсуждении"
-      notify_mentions: "Сообщать мне, если меня упоминают, например, Как дела @%{login}! Вы получите сообщение!"
-      notify_task_lists: "Уведомлять меня об отслеживаемом списке задач"
-      notify_tasks: "Уведомлять меня об отслеживаемой задаче"
+      notifications:
+        notify_conversations: "Уведомлять меня о сообщениях в отслеживаемом обсуждении"
+        notify_mentions: "Сообщать мне, если меня упоминают, например, Как дела @%{login}! Вы получите сообщение!"
+        notify_task_lists: "Уведомлять меня об отслеживаемом списке задач"
+        notify_tasks: "Уведомлять меня об отслеживаемой задаче"
+        wants_task_reminder: "Посылать мне ежедневно список моих задач"
       password: Пароль
       password_confirmation: "Подтверждение пароля"
       sunday: Воскресенье
@@ -1345,12 +1347,11 @@ ru:
         last_name: "До 20 символов."
         login: "Вам нужен логин, чтобы войти. Люди смогут найти вас по логину. Должен быть только маленькими латинскими буквами, без пробелов."
         password: "Сочетания латинских букв или цифр"
-      use_this_email: "У вас есть приглашения для участия в проектах на эту электронную почту. Если вы хотите получить доступ к этим проектам, не изменяйте адрес электронной почты. Вы сможете изменить e-mail после завершения процесса регистрации."
-      wants_task_reminder: "Посылать мне ежедневно список моих задач"
     new: 
       existing_user: "Если у вас уже есть аккаунт, <a href='%{login_url}'>войдите</a> или <a href='%{forgot_url}'>восстановите пароль</a>."
       no_public_signup: "Публичный вход не разрешён в этой системе."
       submit: "Создать запись"
+      use_this_email: "У вас есть приглашения для участия в проектах на эту электронную почту. Если вы хотите получить доступ к этим проектам, не изменяйте адрес электронной почты. Вы сможете изменить e-mail после завершения процесса регистрации."
       title: "Создание аккаунта"
       you_already_have_an_account: "Вы уже зарегистрировали электронную почту %{email}. <a href='%{login_link}'>Войдите</a> или <a href='%{reset_password_link}'>сбросьте пароль</a>, если забыли его."
       you_are_logged_in: "У вас уже есть аккаунт. Чтобы войти другим пользователем, сначала выйдите."
