--- a/config/locales/ko.yml
+++ b/config/locales/ko.yml
@@ -1495,7 +1495,7 @@ ko:
       title: "최근 활동 피드 싱크"
       your_feeds: "뉴스 피드"
     form: 
-      account_deletion: 
+      delete: 
         account_deleted: "계정이 삭제되었습니다. 감사합니다."
         couldnt_delete_account: "아직 삭제되지 않은 프로젝트가 있어서 계정삭제가 되지 않았습니다."
         delete_my_account: "지금 계정삭제하기"
@@ -1503,7 +1503,7 @@ ko:
         steps_before_2: "계정을 삭제할때 다른 프로젝트의 멤버들이 데이터를 잃지 않도록 하기 위한 절차입니다."
         steps_before_3: "현재 가입되어 있는 프로젝트를 삭제하거나 탈퇴해주신 후 이 페이지로 다시 오시기 바랍니다."
         what_will_happen: "계정을 삭제시에는 팀박스 프로필도 삭제 됩니다."
-      avatar: 
+      picture: 
         destroy: "아바타 삭제"
         field: "새로운 아바타"
         gravatar_in_use: "사진이 업로드 되어있지 않습니디. 다음의 기본 사진을 아바타로 사용하겠습니다 {{gravatar}}:"
@@ -1522,10 +1522,12 @@ ko:
       last_name: 이름
       login: "로그인 아이디"
       monday: 월요일
-      notify_conversations: "대화를 \"살펴보기\" 하면 알림"
-      notify_mentions: "예를 들어 Howdy @{{login}}을 언급하게 되면 알려주세요. 이메일을 발송해 드립니다."
-      notify_task_lists: "테스크 리스트를 \"살펴보기\" 하면 알림"
-      notify_tasks: "테스크를 \"살펴보기\" 하면 알림"
+      notifications:
+        notify_conversations: "대화를 \"살펴보기\" 하면 알림"
+        notify_mentions: "예를 들어 Howdy @{{login}}을 언급하게 되면 알려주세요. 이메일을 발송해 드립니다."
+        notify_task_lists: "테스크 리스트를 \"살펴보기\" 하면 알림"
+        notify_tasks: "테스크를 \"살펴보기\" 하면 알림"
+        wants_task_reminder: "매일 내 테스크들에 대한 이메일 보내기"
       password: 패스워드
       password_confirmation: "패스워드 확인"
       phone: 전화번호
@@ -1539,12 +1541,11 @@ ko:
         login: "로그인하기 위한 계정이 필요합니다. 계정이름으로 다른사람들이 당신을 찾을 수 있습니다. 반드시 소문자를 쓰고, 공백은 허용되지 앟습니다. _ 문자를 사용 가능합니다."
         password: "글자와 숫자, 대소문자 조합으로 패스워드를 설정하는것이 좋습니다."
         phone: "전화번호는 동료들에게 공개됩니다. 완전하게 기입하여 주십시오. +82가 한국 지역번호 입니다. 010으로 시작하는 번호는 +8210으로 기입하시면 됩니다,  (예시) +821011112222"
-      use_this_email: "이 이메일 주소로 프로젝트를 공유할 수 있는 초대권을 받으셨습니다. 만약 이 프로젝트들에 접근하시고 싶으시다면 이메일을 변경하지 말아주세요. 등록 절차를 한번 거치고 나서 이메일 주소를 수정할 수 있습니다."
-      wants_task_reminder: "매일 내 테스크들에 대한 이메일 보내기"
     new: 
       existing_user: "이미 걔정을 가지고 있다면, <a href='{{login_url}}'>로그인 하거나</a> 또는 <a href='{{forgot_url}}'>아이디 를 찾으세요.</a>."
       no_public_signup: "계정을 만들어야 접속하실 수 있습니다."
       submit: "계정 생성"
+      use_this_email: "이 이메일 주소로 프로젝트를 공유할 수 있는 초대권을 받으셨습니다. 만약 이 프로젝트들에 접근하시고 싶으시다면 이메일을 변경하지 말아주세요. 등록 절차를 한번 거치고 나서 이메일 주소를 수정할 수 있습니다."
       title: "새 계정 생성"
       you_already_have_an_account: "다음 이메일 주소로 이미 계정이 있습니다. {{email}}. <a href='{{login_link}}'>이메일로 로그인</a> 또는 <a href='{{reset_password_link}}'>비밀번호 재설정</a> if you forgot it."
       you_are_logged_in: "이미 계정이 있습니다. 로그아웃하시고 해당 유저로 접속해 주세요."
