Beta feature: Compact navigation bar
Only visible for users who mark the "betatester" field on their profile.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -980,6 +980,9 @@ en:
       files: Files
       invitations: Invitations
       groups: Project Groups
+    projects_dropdown:
+      all_projects: Overview for all projects
+      new_project: + New project
     global_navigation:
       project_invitations: Project Invitations
       home: Home
